--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,7 +44,7 @@
 					</form>
 					<ul class="navbar-nav ">
 						<li class="nav-item">
-							<a class="nav-link" href="pacientes.html" >Login</a>
+							<a class="nav-link" href="usuario/login.html" >Login</a>
 						</li>
 					</ul>
 				</div>
