--- a/src/main/resources/static/usuario/login.html
+++ b/src/main/resources/static/usuario/login.html
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"> <strong>Odontologos</strong> <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paciente_lista.html" hidden> <strong>Pacientes</strong></a>
+                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
                         </li>
 
                     </ul>
@@ -93,14 +93,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
