--- a/src/main/resources/static/turnoTemplate/form_alta_turno.html
+++ b/src/main/resources/static/turnoTemplate/form_alta_turno.html
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="odontologos.html">Odontologos <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
+                            <a class="nav-link" href="pacientes.html" hidden>Pacientes</a>
                         </li>
 
                     </ul>
@@ -44,7 +44,7 @@
                     </form>
                     <ul class="navbar-nav ">
                         <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" ><strong>Login</strong> </a>
+                            <a class="nav-link" href="pacientes.html" >Login</a>
                         </li>
                     </ul>
                 </div>
@@ -53,39 +53,21 @@
     </div>
 
     <div class="container">
+        <div>Nuevo turno</div>
         <div class="abs-center">
             <form action="#" class="border p-3 form" id="formularioAlta">
-                <div class="text-center"><h3>Alta de paciente</h3> </div>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
                     <input type="text" name="nombre" id="nombre" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" id="apellido" class="form-control">
+                    <label for="horaturno">Hora del turno</label>
+                    <input type="time" name="horaturno" id="horaturno" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="dni">Número de documento de identidad :</label>
-                    <input type="text" name="dni" id="dni" class="form-control">
+                    <label for="numeroMatricula">Número de Matrícula</label>
+                    <input type="text" name="numeroMatricula" id="numeroMatricula" class="form-control">
                 </div>
-                <div class="form-group">
-                    <label for="nombreDeLaCalle">Nombre de la calle :</label>
-                    <input type="text" name="calle" id="nombreDeLaCalle" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="numero">Numeración de la calle :</label>
-                    <input type="number" name="numero" id="numero" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="ciudad">Ciudad :</label>
-                    <input type="text" name="ciudad" id="ciudad" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="provincia">Provincia :</label>
-                    <input type="text" name="provincia" id="provincia" class="form-control">
-                </div>
-
-
                 <button type="submit" class="btn btn-primary">Guardar</button>
             </form>
             <div id="response">
@@ -97,7 +79,7 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
-    <script type="text/javascript" src="../js/paciente/alta_paciente.js"></script>
+    <script type="text/javascript" src="../js/turno/alta_turno.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </div>
 </body>
