--- a/src/main/resources/static/usuarioTemplate/usuario_lista.html
+++ b/src/main/resources/static/usuarioTemplate/usuario_lista.html
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"> <strong>Odontologos</strong> <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paciente_lista.html" hidden> <strong>Pacientes</strong></a>
+                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
                         </li>
 
                     </ul>
@@ -52,61 +52,63 @@
         </div>
     </div>
 
-    <div class="container">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-12">
+
+
+                        <table class="table table-striped border  mt-2" id="usuarios">
+                            <thead>
+                            <tr>
+                                <th scope="col">Actualizar</th>
+                                <th scope="col">Nombre de usuario</th>
+                                <th scope="col">Eliminar</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+
+                </div>
+            </div>
+    <div class="container" style="display:none" id="formularioOculto">
         <div class="abs-center">
-            <form action="#" class="border p-3 form" id="formularioAlta">
-                <div class="text-center"><h3>Alta de paciente</h3> </div>
+
+            <form action="#" class="border p-3 form" id="modificar" >
+                <h4 class="text-center">Modificar</h4>
                 <div class="form-group">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" class="form-control">
+                    <label for="idUsuario">Id</label>
+                    <input type="number" name="id" id="idUsuario" class="form-control" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" id="apellido" class="form-control">
+                    <label for="username">Nombre de usuario</label>
+                    <input type="text" name="username" id="username" class="form-control">
                 </div>
-                <div class="form-group">
-                    <label for="dni">Número de documento de identidad :</label>
-                    <input type="text" name="dni" id="dni" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="nombreDeLaCalle">Nombre de la calle :</label>
-                    <input type="text" name="calle" id="nombreDeLaCalle" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="numero">Numeración de la calle :</label>
-                    <input type="number" name="numero" id="numero" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="ciudad">Ciudad :</label>
-                    <input type="text" name="ciudad" id="ciudad" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="provincia">Provincia :</label>
-                    <input type="text" name="provincia" id="provincia" class="form-control">
+                <div class="form-group" hidden>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" class="form-control">
                 </div>
 
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary text-center">Modificar</button>
+                </div>
 
-                <button type="submit" class="btn btn-primary">Guardar</button>
             </form>
+            <div id="response">
 
-
+            </div>
         </div>
     </div>
-    <div id="response" style="display:none">
-
-    </div>
-
-
-
-
-
 
 
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
-    <script type="text/javascript" src="../js/paciente/alta_paciente.js"></script>
+    <script type="text/javascript" src="../js/usuario/get_usuario.js"></script>
+    <script type="text/javascript" src="../js/usuario/borrar_usuario.js"></script>
+    <script type="text/javascript" src="../js/usuario/actualizar_usuario.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </div>
 </body>
