--- a/src/main/resources/static/turnoTemplate/turno_lista.html
+++ b/src/main/resources/static/turnoTemplate/turno_lista.html
@@ -51,7 +51,7 @@
             </nav>
         </div>
     </div>
-    <div><h4> <a href="form_alta_turno.html"></a> Nuevo turno</h4></div>
+    <div><h4> <a href="form_alta_turno.html">Nuevo turno</a> </h4></div>
     <div class="row d-flex justify-content-center">
         <div class="col-md-12">
 
@@ -64,8 +64,8 @@
                     <th scope="col">Apellido del paciente</th>
                     <th scope="col">Nombre del odontologo</th>
                     <th scope="col">Apellido del odontologo</th>
+                    <th scope="col">Día del turno</th>
                     <th scope="col">Hora del turno</th>
-
                     <th scope="col">Eliminar</th>
                 </tr>
                 </thead>
@@ -82,16 +82,33 @@
             <form action="#" class="border p-3 form" id="modificar" >
                 <h4 class="text-center">Modificar</h4>
                 <div class="form-group">
-                    <label for="idUsuario">Id</label>
-                    <input type="number" name="id" id="idUsuario" class="form-control" readonly>
+                    <label for="idTurno">Id</label>
+                    <input type="number" name="id" id="idTurno" class="form-control" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="username">Nombre de usuario</label>
-                    <input type="text" name="username" id="username" class="form-control">
+                    <label for="nombrePaciente">Nombre del paciente</label>
+                    <input type="text" name="username" id="nombrePaciente" class="form-control" readonly>
                 </div>
-                <div class="form-group" hidden>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" class="form-control">
+                <div class="form-group" >
+                    <label for="apellidoPaciente">Apellido del paciente</label>
+                    <input type="text" name="text" id="apellidoPaciente" class="form-control" readonly>
+                </div>
+                <div class="form-group">
+                    <label for="nombreOdontologo">Nombre del odontologo</label>
+                    <input type="text" name="username" id="nombreOdontologo" class="form-control" readonly >
+                </div>
+                <div class="form-group" >
+                    <label for="apellidoOdontologo">Apellido del odontologo</label>
+                    <input type="text" name="apellido" id="apellidoOdontologo" class="form-control" readonly>
+                </div>
+                <div class="form-group" >
+                    <label for="diaturno">Dia del turno</label>
+                    <input type="date" name="date" id="diaturno" class="form-control">
+                </div>
+
+                <div class="form-group" >
+                    <label for="horaturno">Hora del turno</label>
+                    <input type="time" name="time" id="horaturno" class="form-control">
                 </div>
 
                 <div class="text-center">
@@ -110,9 +127,9 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
-    <script type="text/javascript" src="../js/usuario/get_usuario.js"></script>
-    <script type="text/javascript" src="../js/usuario/borrar_usuario.js"></script>
-    <script type="text/javascript" src="../js/usuario/actualizar_usuario.js"></script>
+    <script type="text/javascript" src="../js/turno/get_turno.js"></script>
+    <script type="text/javascript" src="../js/turno/borrar_turno.js"></script>
+    <script type="text/javascript" src="../js/turno/actualizar_turno.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </div>
 </body>
