actualizando repo, comienzo test unitarios

--- a/src/main/resources/static/odontologoTemplate/form_alta_odontologo.html
+++ b/src/main/resources/static/odontologoTemplate/form_alta_odontologo.html
@@ -1,93 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo App</title>
+    <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend 1"/>
 
-    <title>Turnos Centro Odontológico</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <!-- ---------------- estilos compartidos de login y signup ---------------- -->
+    <link rel="stylesheet" href="../css/loginSignupStyles.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <!-- ---------------------- logica aplicada en register -------------------- -->
+    <script src="../js/odontologo/alta_odontologo.js"></script>
+    <!-- ----------------------  <script src="./scripts/signup.js"></script>------- -->
+    <script src="../js/loaders.js"></script>
 
 </head>
+
 <body>
+<header class="container">
+    <nav>
+        <h1>Clínica Turnos | <span>Sonrisa Feliz</span></h1>
+        <img src="../assets/logo1.jpg" alt="logo DH" class="logo">
+    </nav>
+</header>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> <a class="navbar-brand" href="#"> <h1>Centro Odontológico</h1> </a>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="odontologos.html">Odontologos <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" hidden>Pacientes</a>
-                        </li>
-
-                    </ul>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text">
-                        <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                            Buscar
-                        </button>
-                    </form>
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" >Login</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<div class="container">
+    <a class="nav-link" href="odontologos.html"><strong>Listado de Odontologos </strong> </a>
+    <form  id="formularioAlta">
+        <div class="form-header">
+            <h2>Sonrisa Feliz</h2>
+            <p class="rounded">Registrar Odontologo</p>
         </div>
-    </div>
 
-                <div class="container">
-                    <div class="abs-center">
-                        <form action="#" class="border p-3 form" id="formularioAlta">
-                            <div class="form-group">
-                                <label for="nombre">Nombre</label>
-                                <input type="text" name="nombre" id="nombre" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="apellido">Apellido</label>
-                                <input type="text" name="apellido" id="apellido" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="numeroMatricula">Número de Matrícula</label>
-                                <input type="text" name="numeroMatricula" id="numeroMatricula" class="form-control">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                        </form>
-                        <div id="response">
+        <label>Nombre</label>
+        <input id="nombre" type="text">
 
-                        </div>
-                    </div>
-                </div>
+        <label>Apellido</label>
+        <input id="apellido" type="text">
 
+        <label>Matricula</label>
+        <input id="numeroMatricula" type="text">
 
+        <button type="submit">Registrar Odontologo </button>
+    </form>
+    <div id="response" style="diplay:none"></div>
 
+</div>
 
-
-
-
-
-
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/scripts.js"></script>
-    <script type="text/javascript" src="../js/odontologo/alta_odontologo.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-        </div>
 </body>
+
 </html>
