--- a/src/main/resources/static/odontologoTemplate/form_alta_odontologo.html
+++ b/src/main/resources/static/odontologoTemplate/form_alta_odontologo.html
@@ -30,7 +30,7 @@
 </header>
 
 <div class="container">
-    <a class="nav-link" href="odontologos.html"><strong>Listado de Odontologos </strong> </a>
+    <a class="nav-link" href="odontologo_lista.html"><strong>Listado de Odontologos </strong> </a>
     <form  id="formularioAlta">
         <div class="form-header">
             <h2>Sonrisa Feliz</h2>
@@ -46,7 +46,7 @@
         <label>Matricula</label>
         <input id="numeroMatricula" type="text">
 
-        <button type="submit">Registrar Odontologo </button>
+        <button type="submit" id="crearOdontologo">Registrar Odontologo </button>
     </form>
     <div id="response" style="diplay:none"></div>
 
