--- a/src/main/resources/static/pacienteTemplate/paciente_lista.html
+++ b/src/main/resources/static/pacienteTemplate/paciente_lista.html
@@ -1,56 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clínica Turnos</title>
+    <link rel="icon" type="image/x-icon" href="assets/logo1.jpg">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/loginSignupStyles.css">
 
-    <title>Turnos Centro Odontológico</title>
+    <link rel="stylesheet" href="../css/style.css">
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <!-- ------------------- libreria de iconos Fontawesome -------------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- logica de la página -->
 
-
+    <script src="https://kit.fontawesome.com/4595c2f876.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<div class="container-fluid " id="background">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- cabecera con barra de navegación -->
+<header class="container">
+    <nav>
+        <h1>Clínica Turnos</h1>
 
-                <button class="navbar-toggler my-5" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> <a class="navbar-brand" href="#"> <h1>Centro Odontológico</h1> </a>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 my-5">
-                    <ul class="navbar-nav mx-5">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="odontologos.html"><strong>Odontologos </strong> <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="paciente_lista.html" hidden><strong>Pacientes </strong></a>
-                        </li>
-
-                    </ul>
-                    <form class="form-inline my-5 mx-5">
-                        <input class="form-control mr-sm-2" type="text">
-                        <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                            Buscar
-                        </button>
-                    </form>
-                    <ul class="navbar-nav mx-5">
-                        <li class="nav-item">
-                            <a class="nav-link" href="paciente_lista.html" ><strong>Login </strong></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+        <div class="user-info">
+            <p>username</p>
+            <div class="user-image"></div>
+            <button id="closeApp"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</button>
         </div>
-        <main>
+    </nav>
+</header>
+
+<main class="container">
+
+
             <section>
                 <a href="form_alta_paciente.html">Alta de paciente </a>
                 <table class="table table-striped mt-2" id="pacientes">
@@ -59,11 +51,12 @@
                         <th scope="col">Identificador</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Apellido</th>
-                        <th scope="col">Número de documento de identidad</th>
+                        <th scope="col">Número de DNI</th>
                         <th scope="col">Calle</th>
                         <th scope="col">Altura de la calle</th>
                         <th scope="col">Ciudad</th>
                         <th scope="col">Provincia</th>
+                        <th scope="col">Eliminar</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -74,51 +67,52 @@
                     <div class="abs-center">
 
                         <form action="#" class="border p-3 form" id="modificar" >
-                            <h4 class="text-center">Modificar</h4>
-                            <div class="form-group">
+
+                            <div class="form-header">
+                                <h4 class="text-center">Modificar</h4>
+                            </div>
+
                                 <label for="idPaciente">Id</label>
                                 <input type="number" name="id" id="idPaciente" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
+
+
                                 <label for="nombrePaciente">Nombre</label>
                                 <input type="text" name="nombre" id="nombrePaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
+
                                 <label for="apellidoPaciente">Apellido</label>
                                 <input type="text" name="apellido" id="apellidoPaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
+
                                 <label for="dniPaciente">Número de documento de identidad</label>
                                 <input type="text" name="dni" id="dniPaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="callePaciente">Número de documento de identidad</label>
+
+                                <label for="callePaciente">Nombre de la calle</label>
                                 <input type="text" name="calle" id="callePaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
+
                                 <label for="numeroPaciente">Número de la calle</label>
                                 <input type="text" name="numero" id="numeroPaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
+
                                 <label for="ciudadPaciente">Ciudad</label>
                                 <input type="text" name="ciudad" id="ciudadPaciente" class="form-control">
-                            </div>
-                            <div class="form-group">
+
                                 <label for="provinciaPaciente">Provincia</label>
                                 <input type="text" name="Provincia" id="provinciaPaciente" class="form-control">
-                            </div>
-                            <div class="text-center">
+
                                 <button type="submit" class="btn btn-primary text-center">Modificar</button>
-                            </div>
+
 
                         </form>
-                        <div id="response">
 
-                        </div>
                     </div>
                 </div>
             </section>
         </main>
+<footer class="footer">
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
+
+    </div>
+</footer>
+
 
         <script src="../js/jquery.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
@@ -127,7 +121,5 @@
         <script type="text/javascript"  src="../js/paciente/actualizar_paciente.js"></script>
         <script type="text/javascript"  src="../js/paciente/borrar_paciente.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    </div>
-</div>
 </body>
 </html>
