--- a/src/main/resources/static/turnoTemplate/turno_lista.html
+++ b/src/main/resources/static/turnoTemplate/turno_lista.html
@@ -1,56 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clínica Turnos</title>
+    <link rel="icon" type="image/x-icon" href="assets/logo1.jpg">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/loginSignupStyles.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-    <title>Turnos Centro Odontológico</title>
+    <!-- ------------------- libreria de iconos Fontawesome -------------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <!-- logica de la página -->
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
-
+    <script src="https://kit.fontawesome.com/4595c2f876.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- cabecera con barra de navegación -->
+<header class="container">
+    <nav>
+        <h1>Clínica Turnos</h1>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> <a class="navbar-brand" href="#"> <h1>Centro Odontológico</h1> </a>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
-                        </li>
-
-                    </ul>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text">
-                        <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                            Buscar
-                        </button>
-                    </form>
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" ><strong>Login</strong> </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+        <div class="user-info">
+            <p>username</p>
+            <div class="user-image"></div>
+            <button id="closeApp"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</button>
         </div>
-    </div>
+    </nav>
+</header>
+
+<main class="container">
     <div><h4> <a href="form_alta_turno.html">Nuevo turno</a> </h4></div>
     <div class="row d-flex justify-content-center">
         <div class="col-md-12">
@@ -67,6 +56,7 @@
                     <th scope="col">Día del turno</th>
                     <th scope="col">Hora del turno</th>
                     <th scope="col">Eliminar</th>
+
                 </tr>
                 </thead>
                 <tbody>
@@ -80,49 +70,49 @@
         <div class="abs-center">
 
             <form action="#" class="border p-3 form" id="modificar" >
-                <h4 class="text-center">Modificar</h4>
+
                 <div class="form-group">
+                    <h4 class="text-center">Modificar</h4>
+                </div>
                     <label for="idTurno">Id</label>
                     <input type="number" name="id" id="idTurno" class="form-control" readonly>
-                </div>
-                <div class="form-group">
+
+
                     <label for="nombrePaciente">Nombre del paciente</label>
                     <input type="text" name="username" id="nombrePaciente" class="form-control" readonly>
-                </div>
-                <div class="form-group" >
+
                     <label for="apellidoPaciente">Apellido del paciente</label>
                     <input type="text" name="text" id="apellidoPaciente" class="form-control" readonly>
-                </div>
-                <div class="form-group">
+
                     <label for="nombreOdontologo">Nombre del odontologo</label>
                     <input type="text" name="username" id="nombreOdontologo" class="form-control" readonly >
-                </div>
-                <div class="form-group" >
+
                     <label for="apellidoOdontologo">Apellido del odontologo</label>
                     <input type="text" name="apellido" id="apellidoOdontologo" class="form-control" readonly>
-                </div>
-                <div class="form-group" >
+
                     <label for="diaturno">Dia del turno</label>
                     <input type="date" name="date" id="diaturno" class="form-control">
-                </div>
 
-                <div class="form-group" >
                     <label for="horaturno">Hora del turno</label>
                     <input type="time" name="time" id="horaturno" class="form-control">
-                </div>
 
-                <div class="text-center">
                     <button type="submit" class="btn btn-primary text-center">Modificar</button>
-                </div>
+
 
             </form>
-            <div id="response">
 
-            </div>
         </div>
     </div>
+</main>
+<footer class="footer">
+    <hr>
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
 
-
+    </div>
+    <hr>
+</footer>
+</body>
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
@@ -131,6 +121,4 @@
     <script type="text/javascript" src="../js/turno/borrar_turno.js"></script>
     <script type="text/javascript" src="../js/turno/actualizar_turno.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</div>
-</body>
 </html>
