--- a/src/main/resources/static/usuarioTemplate/form_alta_usuario.html
+++ b/src/main/resources/static/usuarioTemplate/form_alta_usuario.html
@@ -1,89 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo App</title>
+    <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend 1"/>
 
-    <title>Turnos Centro Odontológico</title>
+    <!-- ---------------- estilos compartidos---------------- -->
+    <link rel="stylesheet" href="../css/loginSignupStyles.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <script src="../js/loaders.js"></script>
 
 </head>
+
 <body>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> <a class="navbar-brand" href="#"> <h1>Centro Odontológico</h1> </a>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
-                        </li>
-
-                    </ul>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text">
-                        <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                            Buscar
-                        </button>
-                    </form>
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" ><strong>Login</strong> </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <div> <a href="usuario_lista.html">Lista usuarios</a> </div>
+<header class="container">
+    <nav>
+        <h1>Clínica Turnos | <span>Sonrisa Feliz</span></h1>
+        <img src="../assets/logo1.jpg" alt="logo Muelita" class="logo">
+    </nav>
+</header>
+    <div class="enlace-lista"> <a href="usuario_lista.html">Lista usuarios</a> </div>
 
     <div class="container">
         <div class="abs-center">
             <form action="#" class="border p-3 form" id="formularioAlta">
-                <div class="text-center"><h3>Formulario alta usuario</h3> </div>
-                <div class="form-group">
+                <div class="form-header"><h3>Formulario alta usuario</h3> </div>
+
                     <label for="username">Nombre de usuario :</label>
                     <input type="text" name="username" id="username" class="form-control">
-                </div>
-                <div class="form-group">
+
                     <label for="password">Password :</label>
                     <input type="password" name="password" id="password" class="form-control">
-                </div>
-                <div class="form-group">
+
                     <label for="repeatPassword">Repita su password :</label>
                     <input type="password" name="repeatPassword" id="repeatPassword" class="form-control">
-                </div>
-                  <div class="text-center"><button type="submit" class="btn btn-primary">Guardar usuario</button></div>
+               <button type="submit" class="btn btn-primary" id="altaUsuario">Guardar usuario</button>
 
 
           </form>
-            <div id="response">
 
-            </div>
         </div>
     </div>
+<footer class="footer">
+    <hr>
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
 
+    </div>
+    <hr>
+</footer>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
     <script type="text/javascript" src="../js/usuario/alta_usuario.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</div>
 </body>
 </html>
