--- a/src/main/resources/static/usuarioTemplate/usuario_lista.html
+++ b/src/main/resources/static/usuarioTemplate/usuario_lista.html
@@ -1,60 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo App</title>
+    <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend 1"/>
 
-    <title>Turnos Centro Odontológico</title>
+    <!-- ---------------- estilos compartidos---------------- -->
+    <link rel="stylesheet" href="../css/loginSignupStyles.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <script src="../js/loaders.js"></script>
 
 </head>
+
 <body>
+<header class="container">
+    <nav>
+        <h1>Clínica Turnos | <span>Sonrisa Feliz</span></h1>
+        <img src="../assets/logo1.jpg" alt="logo Muelita" class="logo">
+    </nav>
+</header>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> <a class="navbar-brand" href="#"> <h1>Centro Odontológico</h1> </a>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
-                        </li>
-
-                    </ul>
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text">
-                        <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                            Buscar
-                        </button>
-                    </form>
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="pacientes.html" ><strong>Login</strong> </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </div>
+<div class="container">
 
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-12">
+
 
 
                         <table class="table table-striped border  mt-2" id="usuarios">
@@ -70,29 +48,27 @@
                             </tbody>
                         </table>
 
-                </div>
-            </div>
+
     <div class="container" style="display:none" id="formularioOculto">
         <div class="abs-center">
 
             <form action="#" class="border p-3 form" id="modificar" >
-                <h4 class="text-center">Modificar</h4>
-                <div class="form-group">
+
+                <div class="form-header">
+                    <h4 class="text-center">Modificar</h4>
+                </div>
                     <label for="idUsuario">Id</label>
                     <input type="number" name="id" id="idUsuario" class="form-control" readonly>
-                </div>
-                <div class="form-group">
+
+
                     <label for="username">Nombre de usuario</label>
                     <input type="text" name="username" id="username" class="form-control">
-                </div>
-                <div class="form-group" hidden>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" class="form-control">
-                </div>
 
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary text-center">Modificar</button>
-                </div>
+
+                    <input type="password" name="password" id="password" class="form-control" hidden>
+
+                    <button type="submit" class="btn btn-primary text-center" id="altaUsuario">Modificar</button>
+
 
             </form>
             <div id="response">
@@ -101,8 +77,15 @@
         </div>
     </div>
 
+</div>
+<footer class="footer">
+    <br>
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
 
-
+    </div>
+    <hr>
+</footer>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
@@ -110,6 +93,6 @@
     <script type="text/javascript" src="../js/usuario/borrar_usuario.js"></script>
     <script type="text/javascript" src="../js/usuario/actualizar_usuario.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</div>
+
 </body>
 </html>
