--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,14 +26,12 @@
 
 <!-- cabecera con barra de navegación -->
 <header class="container">
-    <div class="cabecera">
-        <span>Horario de Lunes a Viernes  8:00hs a 20:00hs</span> <span>Contacto Whatsapp:29206412131</span>
-    </div>
+
     <div>
         <nav class="navbar">
             <a  href="index.html"><h1>Clínica Turnos</h1></a>
             <ul>
-                <li> <a href="odontologoTemplate/odontologo_lista.html">Odontologos</a>  </li>
+                <li> <a href="odontologoTemplate/odontologo_lista.html">Odontólogos</a>  </li>
 
                 <li>   <a href="pacienteTemplate/paciente_lista.html">Pacientes </a></li>
 
@@ -54,14 +52,67 @@
 <main class="container">
 
 
-    <div class="listar_odontologo">
+    <div class="wrapper">
+        <div class="slider" id="slider">
+            <ul class="slides">
+                <li class="slide" id="slide1">
+                    <a href="#">
 
+                        <img src="assets/dentista.jpg" alt="mujer sonriendo en consultorio odontologico" width="300px">
+                    </a>
+                </li>
+                <li class="slide" id="slide2">
+                    <a href="#">
+
+                        <img src="assets/sonrisa.jpg" alt="photo 2" width="300px">
+                    </a>
+                </li>
+                <li class="slide" id="slide3">
+                    <a href="#">
+
+                        <img src="assets/sonrisaCentrada.jpg" alt="photo 3" width="300px">
+                    </a>
+                </li>
+                <li class="slide" id="slide4">
+                    <a href="#">
+
+                        <img src="assets/interior.jpg" alt="photo 4">
+                    </a>
+                </li>
+                <li class="slide" id="slide5">
+                    <a href="#">
+
+                        <img src="assets/dental.jpg" alt="photo 5">
+                    </a>
+                </li>
+                <li class="slide">
+                    <a href="#">
+
+                        <img src="assets/dentista.jpg" alt="photo 1">
+                    </a>
+                </li>
+            </ul>
+            <ul class="slider-controler">
+                <li><a href="#slide1">&bullet;</a></li>
+                <li><a href="#slide2">&bullet;</a></li>
+                <li><a href="#slide3">&bullet;</a></li>
+                <li><a href="#slide4">&bullet;</a></li>
+                <li><a href="#slide5">&bullet;</a></li>
+            </ul>
+        </div>
     </div>
 
 </main>
 
 
+<footer class="footer">
 
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
+
+    </div>
+    <hr>
+</footer>
 </body>
 
 </html>
