--- a/src/main/resources/static/usuarioTemplate/login.html
+++ b/src/main/resources/static/usuarioTemplate/login.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontologos</strong>  <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../odontologoTemplate/odontologos.html"><strong>Odontólogos</strong>  <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pacienteTemplate/paciente_lista.html" hidden> <strong>Pacientes</strong> </a>
