--- a/src/main/resources/static/pacienteTemplate/form_alta_paciente.html
+++ b/src/main/resources/static/pacienteTemplate/form_alta_paciente.html
@@ -5,28 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo App</title>
-    <link rel="icon" type="image/x-icon" href="./assets/DH_Logo_Black.png">
-    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend 1"/>
+    <title>Clínica Turnos</title>
+    <link rel="icon" type="image/x-icon" href="assets/logo1.jpg">
+    <meta name="description" content="Digital House CTD | Proyecto integrador | Backend" />
 
-
-    <!-- ---------------- estilos compartidos de login y signup ---------------- -->
+    <!-- ----------------------------- estilos CSS ----------------------------- -->
+    <link rel="stylesheet" href="../css/tasksStyles.css">
     <link rel="stylesheet" href="../css/loginSignupStyles.css">
     <link rel="stylesheet" href="../css/style.css">
-
-    <!-- ---------------------- logica aplicada en register -------------------- -->
-    <script src="../js/odontologo/alta_paciente.js"></script>
-    <!-- ----------------------  <script src="./scripts/signup.js"></script>------- -->
-    <script src="../js/loaders.js"></script>
+    <!-- ------------------- libreria de iconos Fontawesome -------------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
 <body>
+
+<!-- cabecera con barra de navegación -->
 <header class="container">
-    <nav>
-        <h1>Clínica Turnos | <span>Sonrisa Feliz</span></h1>
-        <img src="../assets/logo1.jpg" alt="logo Muelita" class="logo">
-    </nav>
+
+    <div>
+        <nav class="navbar">
+            <a  href="../index.html"><h1>Clínica Turnos</h1></a>
+            <ul>
+                <li> <a href="../odontologoTemplate/odontologo_lista.html">Odontólogos</a>  </li>
+
+                <li>   <a href="../pacienteTemplate/paciente_lista.html">Pacientes </a></li>
+
+                <li>  <a href="../turnoTemplate/turno_lista.html">Turnos </a> </li>
+            </ul>
+
+            <div class="user-info">
+                <p>username</p>
+                <div class="user-image"></div>
+                <button id="closeApp"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</button>
+            </div>
+        </nav>
+    </div>
+
+
 </header>
 
 
@@ -70,6 +88,12 @@
     <div id="response" style="display:none">
 
     </div>
+<footer class="footer">
+    <div>
+        <h4 class="titulo-footer">Muelita-|-Sonrisa Feliz</h4>
+
+    </div>
+</footer>
 
     <script src="../js/loaders.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
