--- a/src/main/resources/static/pacienteTemplate/paciente_lista.html
+++ b/src/main/resources/static/pacienteTemplate/paciente_lista.html
@@ -8,36 +8,43 @@
     <title>Clínica Turnos</title>
     <link rel="icon" type="image/x-icon" href="assets/logo1.jpg">
     <meta name="description" content="Digital House CTD | Proyecto integrador | Backend" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+    <!-- ----------------------------- estilos CSS ----------------------------- -->
+    <link rel="stylesheet" href="../css/tasksStyles.css">
     <link rel="stylesheet" href="../css/loginSignupStyles.css">
-
     <link rel="stylesheet" href="../css/style.css">
-
     <!-- ------------------- libreria de iconos Fontawesome -------------------- -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- logica de la página -->
-
-    <script src="https://kit.fontawesome.com/4595c2f876.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
 <!-- cabecera con barra de navegación -->
 <header class="container">
-    <nav>
-        <h1>Clínica Turnos</h1>
 
-        <div class="user-info">
-            <p>username</p>
-            <div class="user-image"></div>
-            <button id="closeApp"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</button>
-        </div>
-    </nav>
+    <div>
+        <nav class="navbar">
+            <a  href="../index.html"><h1>Clínica Turnos</h1></a>
+            <ul>
+                <li> <a href="../odontologoTemplate/odontologo_lista.html">Odontólogos</a>  </li>
+
+                <li>   <a href="../pacienteTemplate/paciente_lista.html">Pacientes </a></li>
+
+                <li>  <a href="../turnoTemplate/turno_lista.html">Turnos </a> </li>
+            </ul>
+
+            <div class="user-info">
+                <p>username</p>
+                <div class="user-image"></div>
+                <button id="closeApp"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</button>
+            </div>
+        </nav>
+    </div>
+
+
 </header>
 
 <main class="container">
